# saas_legal

./: .gitignore  README.md  deply-local.md  docker-compose.yml
agente-telegram/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  gunicorn_config.py  main.py  pyproject.toml  setup_webhook.py
agente-telegram/docs/commits/: commit-e61767b.md  commit-ead2ac4.md
api-panel/: .dockerignore  Dockerfile  README.md  composer.json
api-panel/app/Models/: Category.php  Client.php  Document.php  Membership.php  Setting.php  User.php  (+2 more)
api-panel/bootstrap/: app.php
api-panel/config/: auth.php
api-panel/routes/: api.php
bot-telegram/: .env.example  Dockerfile  README.md  main.py  requirements.txt
frontend/: .eslintrc-auto-import.json  auto-imports.d.ts  components.d.ts  package.json  pnpm-lock.yaml  themeConfig.js  typed-router.d.ts
frontend/src/: main.js
frontend/tsx-0/: 17672-21b1c48987476ac7f72686fd662f87fae727326b
qdrant_data/: raft_state.json
rag-core/: .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  README.md  check_ingestion_status.py  custom_types.py  data_loader.py  detailed_results.txt  docker-compose.yaml  gunicorn_config.py  ingest_penal.py  ingestion_status.txt  main.py  pyproject.toml  test_case_analysis.py  vector_db.py
rag-core/bruno-api/: ingesta docker.bru  ingesta nuevo pdf_path.bru  ingesta.bru  query docker.bru  query-area-incorrecta.bru  query-pdf-actualizado.bru  query-pdf-original.bru  query.bru
rag-core/bruno-api/4ec9025/: folder.bru  ingesta.bru  query.bru
rag-core/docs/commits/: commit-3d00e2b.md
(+1104 files in other folders)
