[project]
name = "rag-python-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "gunicorn>=23.0.0",
    "llama-index-core>=0.14.8",
    "llama-index-readers-file>=0.5.4",
    "openai>=2.7.2",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "uvicorn>=0.38.0",
]
